2007-10-18  Akim Demaille  <akim@lrde.epita.fr>

	foreach, factor.
	* src/uconnection.cc: Use BOOST_FOREACH.
	(removeMonitor): New, to factor two uses.
	Simplify if () { return } else { body } into if () { return }
	body.
	Remove useless parens.

2007-10-18  Akim Demaille  <akim@lrde.epita.fr>

	foreach.
	* src/userver.cc: use it.

2007-10-16  Akim Demaille  <demaille@gostai.com>

	BOOST_FOREACH IS COOL.
	* src/uconnection.cc, src/uobject.cc, src/userver.cc,
	* src/uvariable.cc: Use it.

2007-10-16  Akim Demaille  <demaille@gostai.com>

	Restore subscription to uobject.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Update tests, fix failure.
	* src/parser/bison/ugrammar.y: static applies to lvalues,
	as per variable-qualifiers.chk.
	* tests-local.mk: Update.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Update tests.
	* configure.ac: and rev.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Applied changes to userver.hh by hand.

	2007-10-05  Guillaume Deslandes  <deslandes@gostai.com>
	Add package version and revision numbers to userver
	* src/userver.cc,
	* src/userver.hh: Here.
	This is for --version option of engines.

	2007-10-05  Guillaume Deslandes  <deslandes@gostai.com>
	Remove deprecated exec warning
	* src/uexpression.cc: Here.
	This warning is for rev >= 1.5.
	Fix ticket #182.

	2007-10-04  Matthieu Nottale  <nottale@gostai.com>
	Fix stopif bug, fix compile warnings.
	* src/ucommand.cc: STOPIF: Tag children of morphed command.
	* src/ueventcompound.cc,
	* src/ueventmatch.cc: Fix compile warnings.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Merge 1620:1630 from 1.0.
	2007-10-02  mefyl  <mefyl@lrde.epita.fr>
	Revert patches 1618 to 1624 destined to 1.5.
	* src/parser/bison/ugrammar.y,
	* src/parser/bison/utoken.l,
	* src/ucommand.cc,
	* src/uvariablename.cc: Here.
	
	2007-10-02  mefyl  <mefyl@lrde.epita.fr>
	Fix operators precedence. Add '<<' and '>>'.
	* src/parser/bison/ugrammar.y,
	* src/parser/bison/utoken.l: Here.
	