@@ -1,5 +1,13 @@
 2007-10-18  Akim Demaille  <akim@lrde.epita.fr>
 
+	Move TagInfo stuff into tag-info.*.
+	* src/ucommand.hh, src/ucommand.cc (initializeTagInfos)
+	(systemTagInfo, notagTagInfo): Move to...
+	* include/kernel/tag-info.hh, src/tag-info.cc: here.
+	* src/userver.cc: Adjust.
+
+2007-10-18  Akim Demaille  <akim@lrde.epita.fr>
+
 	foreach, factor.
 	* src/uconnection.cc: Use BOOST_FOREACH.
 	(removeMonitor): New, to factor two uses.
